--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Home</title>
+    <title>ClydeBank Coffee Shop</title>
+    <meta description= "ClydeBank Coffee shop features premium coffee at an affordable price.">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
