--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <li>Cappucino $3.00</li>
                     <li>Latte $3.00</li>
                     <li>Regular Coffe $1.50</li>
+                    <li>Americanos $2.25</li>
                 </ul>
                 <ul>
                     <li>+ $0.75</li>
