--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         </ul>
     </div>
 </nav>
-<main>
+<main id="coffeehouse">
     <div class="container">
     <p>ClydeBank Coffee Shop welcomes you to our website. If you're in the area, we kindly ask you to stop by and have a cup with us.</p>
     </div>
